<resources>
    <string name="app_name">FAU Fablab</string>
    <string name="appbar_fau">FAU</string>
    <string name="appbar_fablab">FabLab</string>
    <string name="appbar_opened">Geöffnet</string>
    <string name="appbar_opened_since">seit</string>
    <string name="appbar_closed">Geschlossen</string>
    <string name="appbar_fablab_closed">Das FabLab war heute noch nicht geöffnet</string>
    <string name="appbar_orderedby_name">Sortiert nach Name</string>
    <string name="appbar_orderedby_price">Sortiert nach Preis</string>
    <string name="appbar_orderby_name">Nach Name sortieren</string>
    <string name="appbar_orderby_price">Nach Preis sortieren</string>
    <string name="cart_title">Warenkorb:</string>
    <string name="cart_price">Gesamtpreis:</string>
    <string name="cart_total_price_title">Gesamtpreis:</string>
    <string name="cart_button_checkout">Zur Kasse</string>
    <string name="cart_article_label">Artikel</string>
    <string name="cart_product_quantity">Menge in</string>
    <string name="cart_product_removed">Artikel entfernt</string>
    <string name="cart_product_undo">Rückgängig</string>
    <string name="cart_entry_dialog_change_amount">Menge ändern</string>
    <string name="search_hint">Suche Produkt</string>
    <string name="title_scan_product">Produkt scannen</string>
    <string name="action_add_to_cart">In den Warenkorb</string>
    <string name="action_update">Speichern</string>
    <string name="add_to_calendar"> Termin in Kalender\neintragen</string>
    <string name="add_to_cart_amount">Menge:</string>
    <string name="add_to_cart_rounded_to">gerundet auf</string>
    <string name="add_to_cart_plus">+</string>
    <string name="add_to_cart_minus">-</string>
    <string name="barcode_scanner_invalid_barcode">Ungültiger Barcode</string>
    <string name="barcode_scanner_product_not_found">Produkt nicht gefunden</string>
    <string name="product_dialog_location">Standort anzeigen</string>
    <string name="product_dialog_cart">Zum Warenkorb hinzufügen</string>
    <string name="product_dialog_report">Ausgegangenes Produkt melden</string>
    <string name="retrofit_callback_failure">Leider ist bei der Abfrage ein Fehler aufgetreten</string>
    <string name="no_products_found">Es wurden keine Produkte gefunden</string>
    <string name="title_scan_qr_code">QR-Code scannen</string>
    <string name="checkout_pay">Bitte gehen Sie zur Kasse und bezahlen Sie</string>
    <string name="checkout_error">Fehler beim Übertragen des Warenkorbs</string>
    <string name="checkout_cancelled">Der Bezahlvorgang wurde abgebrochen</string>
    <string name="checkout_paid">Ihr Warenkorb wurde bezahlt</string>
    <string name="checkout_request">Bitte am Kassenterminal \'Warenkorb aus App laden\' auswählen und den angezeigten Code scannen.</string>
    <string name="retry">Nochmal versuchen</string>
    <string name="qr_code_scanner_invalid_qr_code">Ungültiger QR-Code</string>
    <string name="invalid_location">Standort nicht verfügbar</string>
    <string name="news_preview_image_content_description">Vorschaubild</string>
    <string name="dates_date">Datum:</string>
    <string name="dates_time">Uhrzeit:</string>
    <string name="dates_location">Ort:</string>
    <string name="action_search">Suche</string>
    <string name="search_all_hint">Produkt</string>
    <string name="per">pro</string>
    <string name="stacktrace_messaging_subject">Fehlermeldung FAU FabLab</string>
    <string name="stacktrace_messaging_chooser_title">Sende Fehlermeldung mit:</string>
    <string name="stacktrace_messaging_dialog_title">Fehlermeldung</string>
    <string name="stacktrace_messaging_dialog_text">Leider ist bei der letzten Benutzung ein Fehler aufgetreten. Wir sind stetig bemüht die Applikation zu verbessern. Deshalb bitten wir Sie die Fehlermeldung an uns weiterzuleiten.</string>
    <string name="outOfStock_messaging_subject">Ausgegangenes Produkt</string>
    <string name="outOfStock_messaging_chooser_title">Sende Meldung mit:</string>
    <string name="alert_messaging_subject">Störmeldung</string>
    <string name="alert_messaging_chooser_title">Sende Meldung mit:</string>
    <string name="alert_dialog_title">Störmeldung</string>
    <string name="alert_dialog_tool">Gerät:</string>
    <string name="alert_dialog_problem">Problem:</string>
    <string name="reservation_dialog_title">Maschinenreservierung</string>
    <string name="reservation_no_machine_available">Zur Zeit ist keine Maschine reservierbar.</string>
    <string name="reservation_no_usage_available">Es sind noch keine Reservierungen vorhanden.</string>
    <string name="reservation_button">Reservieren</string>
    <string name="reservation_button_now">Jetzt reservieren!</string>
    <string name="reservation_hint_projects">Projekte</string>
    <string name="reservation_hint_user">User</string>
    <string name="inventory_fragment_title">Inventur</string>
    <string name="inventory_fragment_scan_product">Produkt scannen</string>
    <string name="inventory_fragment_search_product">Produkt suchen</string>
    <string name="inventory_fragment_search_category">Kategorien suchen</string>
    <string name="inventory_fragment_delete_inventory">Inventar löschen</string>
    <string name="inventory_fragment_show_inventory">Inventar anzeigen</string>
    <string name="show_inventory_fragment_title">Inventar:</string>
    <string name="inventory_card_product_id">Produkt ID:</string>
    <string name="inventory_card_user_name">durchgeführt von:</string>
    <string name="inventory_card_updated_at">durchgeführt am:</string>
    <string name="inventory_delete_inventory_fail">Fehler beim Inventar löschen aufgetreten</string>
    <string name="inventory_delete_inventory_success">Inventar gelöscht</string>
    <string name="inventory_get_inventory_fail">Fehler bei der Abfrage des Inventars aufgetreten</string>
    <string name="inventory_get_inventory_success">Es sind keine Objekte im Inventar vorhanden</string>
    <string name="inventory_add_inventory_fail">Objekt konnte nicht hinzugefügt werden</string>
    <string name="inventory_add_inventory_success">Objekt erfolgreich hinzugefügt</string>
    <string name="inventory_login_title">Login</string>
    <string name="inventory_login_login">Login</string>
    <string name="inventory_login_scanner">Mit QRCode einloggen</string>
    <string name="inventory_login_hint_username">Benutzername</string>
    <string name="inventory_login_hint_password">Passwort</string>
    <string name="inventory_login_unauthorized_user">Anmeldung ist fehlgeschlagen</string>
    <string name="inventory_login_qr_code_scanner_request">Bitte Inventur QRCode scannen</string>
    <string name="version_check_update_optional">Optionales Update verfügbar</string>
    <string name="version_check_update_required">Update verfügbar</string>
    <string name="version_check_no_update_available">Kein Update verfügbar</string>
    <string name="category_title">Kategorie:</string>
    <string name="category_button">Produkte suchen</string>
    <string name="add_calendar">FabLab Kalender hinzugefügt</string>
    <string name="existing_calendar">FabLab Kalender existiert bereits</string>
    <string name="action_add_photo_project">Photo hinzufügen</string>
    <string name="action_save_project">Projekt speichern</string>
    <string name="action_delete_project">Projekt löschen</string>
    <string name="projects_title">Projekte:</string>
    <string name="action_new_project">neues Projekt</string>
    <string name="action_create_new_project">neues Projekt erstellen</string>
    <string name="action_create_project_from_cart">Projekt aus Warenkorb erstellen</string>
    <string name="no_carts_available">Es liegen keine Warenkörbe vor</string>
    <string name="choose_cart_title">Warenkörbe:</string>
    <string name="action_browse_gallery">Gallery durchsuchen</string>
    <string name="action_take_photo">Photo aufnehmen</string>
    <string name="edit_project_hint_title">Titel</string>
    <string name="edit_project_hint_short_description">Kurzbeschreibung</string>
    <string name="edit_project_hint_description">Beschreibung</string>
    <string name="save_project_title">Speichern</string>
    <string name="save_project_local">Entwurf lokal speichern</string>
    <string name="save_project_github">auf Github hochladen</string>
    <string name="save_project_success">Projekt wurde gespeichert</string>
    <string name="save_project_failure">Beim Speichern ist leider ein Fehler aufgetreten</string>
    <string name="project_photo_image_too_large">das Bild ist zu groß</string>
    <string name="project_photo_not_yet_uploaded">Bitte das Projekt erst auf Github hochladen, bevor Bilder eingefügt werden können</string>
    <string name="project_photo_upload_failure">Beim Hochladen ist leider ein Fehler aufgetreten</string>
    <string name="license_information_ok">Zustimmen</string>
    <string name="license_information_cancel">Ablehnen</string>
    <string name="license_information_title">
        <![CDATA[
        Um Ihr Projekt hochzuladen müssen Sie der
        <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0-Lizenz</a>
        für sämtliche Inhalte zustimmen.
        ]]>
    </string>
    <string name="project_photo_image_wrong_format">Die Datei hat das falsche Format</string>
    <string name="cart_entry_title">Warenkorb</string>
    <string name="cart_entry_items">Items:</string>
    <string name="edit_cart_cart">#Warenkorb:</string>
    <string name="edit_cart_description">#Beschreibung:</string>
    <string name="confirm_project_delete_message">Möchten Sie das Projekt wirklich löschen?</string>
    <string name="confirm_project_delete">Ja</string>
    <string name="confirm_project_not_delete">Nein</string>
    <string name="delete_project_failure">Leider ist beim löschen ein Fehler aufgetreten</string>
    <string name="key_show_cart_fab">showcartfab</string>
    <string name="key_user">user</string>
    <string name="key_product_search">productsearch</string>
    <string name="key_project">project</string>
    <string name="key_cart">cart</string>
    <string name="key_delete_project_position">delete_position</string>
    <string name="key_delete_project_project">delete_project</string>
    <string name="product_map_download_failed">Fehler beim Laden der Karte aufgetreten</string>
    <string name="news">News</string>
    <string name="productsearch">Produkt suchen</string>
    <string name="categorysearch">Kategoriesuche</string>
    <string name="scanner">Produkt scannen</string>
    <string name="about">Über</string>
    <string name="settings">Einstellungen</string>
    <string name="alert">Störmeldung</string>
    <string name="logout">Logout</string>
    <string name="inventory">Inventur</string>
    <string name="projects">Projekte</string>
    <string name="reservation">Maschinenreservierung</string>
    <string name="navdrawer_login_hint_username">Username</string>
    <string name="navdrawer_login_hint_password">Password</string>
    <string name="navdrawer_button_login">Login</string>
    <string name="app_website">fablab.fau.de</string>
    <string name="small_widget_name">FabLab Widget Small</string>
    <string name="large_widget_name">FabLab Widget Large</string>
</resources>