<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- group with single selected item so only one item is highlighted in the nav menu -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_news"
            android:icon="@drawable/ic_nav_news"
            android:title="@string/news"/>
        <item
            android:id="@+id/drawer_item_productsearch"
            android:icon="@drawable/ic_nav_search_product"
            android:title="@string/productsearch"/>
        <item
            android:id="@+id/drawer_item_categorysearch"
            android:icon="@drawable/ic_nav_category_search"
            android:title="@string/categorysearch"/>
        <item
            android:id="@+id/drawer_item_scanner"
            android:icon="@drawable/ic_nav_scan_product"
            android:title="@string/scanner" />
        <item
            android:id="@+id/drawer_item_inventory"
            android:icon="@drawable/ic_nav_inventory"
            android:title="@string/inventory" />
        <!--
        <item
            android:id="@+id/drawer_item_projects"
            android:icon="@drawable/ic_nav_project"
            android:title="@string/projects" />
            -->
        <item
            android:id="@+id/drawer_item_alert"
            android:icon="@drawable/ic_nav_warning"
            android:title="@string/alert" />
        <item
            android:id="@+id/drawer_item_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/drawer_item_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/about" />
        <item
            android:id="@+id/drawer_item_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/logout" />
    </group>
</menu>