<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_fab_search_product"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="de.fau.cs.mad.fablab.android.view.fragments.productsearch.ProductSearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_orderby"
        android:icon="@drawable/sort_alpha"
        android:orderInCategory="101"
        android:title="@string/appbar_orderedby_name"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_orderby_name"
                android:title="@string/appbar_orderby_name"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_orderby_price"
                android:title="@string/appbar_orderby_price"
                app:showAsAction="always" />
        </menu>
    </item>
</menu>
