<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/alert_dialog_margin"
    android:paddingLeft="@dimen/alert_dialog_margin"
    android:paddingTop="@dimen/alert_dialog_margin"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_login_title"
        android:textSize="@dimen/textsize_inventory_login_title"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inventory_login_username"
        android:hint="@string/inventory_login_hint_username"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inventory_login_password"
        android:password="true"
        android:hint="@string/inventory_login_hint_password"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inventory_login_login_button"
            android:layout_weight="1"
            android:textSize="@dimen/textsize_button"
            android:text="@string/inventory_login_login"
            android:layout_toLeftOf="@+id/inventory_login_scan_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inventory_login_scan_button"
            android:layout_weight="1"
            android:textSize="@dimen/textsize_button"
            android:text="@string/inventory_login_scanner"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>