<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/product_dialog_margin"
    android:paddingLeft="@dimen/product_dialog_margin"
    android:paddingTop="@dimen/product_dialog_margin"
    android:paddingBottom="@dimen/product_dialog_margin">

    <TextView
        android:id="@+id/product_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_title_material"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/product_dialog_location"
        android:layout_below="@+id/product_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/product_dialog_margin"
        android:text="@string/product_dialog_location"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:id="@+id/product_dialog_cart"
        android:layout_below="@+id/product_dialog_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/product_dialog_margin"
        android:text="@string/product_dialog_cart"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:id="@+id/product_dialog_report"
        android:layout_below="@+id/product_dialog_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/product_dialog_margin"
        android:text="@string/product_dialog_report"
        android:textSize="@dimen/abc_text_size_medium_material"/>


</RelativeLayout>