<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasketActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cart_title"
        android:text="@string/cart_title" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cart_empty"
        android:text="@string/cart_empty"
        android:visibility="invisible"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/cart_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".30"
        android:scrollbars="vertical"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cart_total_price_title"
        android:text="@string/cart_total_price_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cart_total_price"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/cart_button_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center_vertical|right"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:text="@string/cart_button_checkout"/>

    </LinearLayout>

</LinearLayout>