<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navdrawer_header"
    android:layout_width="match_parent"
    android:layout_height="178dp"
    android:background="@drawable/navdrawer_header"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_marginTop="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navdrawer_header_loggedin"
        android:visibility="gone"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/launcher_icon"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="38dp"
            android:id="@+id/navdrawer_circleView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/navdrawer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="#ffffff"
                android:text="@string/app_name"
                android:textSize="14sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/navdrawer_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/app_website"
                android:textSize="14sp"
                android:textStyle="normal"

                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navdrawer_header_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/navdrawer_margin_top">

        <EditText
            android:id="@+id/drupal_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/navdrawer_edittext_margin_lr"
            android:layout_marginRight="@dimen/navdrawer_edittext_margin_lr"
            android:layout_marginTop="@dimen/navdrawer_edittext_margin_tb"
            android:layout_marginBottom="@dimen/navdrawer_edittext_margin_tb"
            android:inputType="text"
            android:hint="@string/navdrawer_login_hint_username"
            android:textColorHint="#ffffff"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/drupal_login_password"
            android:hint="@string/navdrawer_login_hint_password"
            android:textColorHint="#ffffff"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/navdrawer_edittext_margin_lr"
            android:layout_marginRight="@dimen/navdrawer_edittext_margin_lr"
            android:layout_marginTop="@dimen/navdrawer_edittext_margin_tb"
            android:layout_marginBottom="@dimen/navdrawer_edittext_margin_tb"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/drupal_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/navdrawer_button_margin_lr"
            android:layout_marginRight="@dimen/navdrawer_button_margin_lr"
            android:layout_marginTop="@dimen/navdrawer_edittext_margin_tb"
            android:layout_marginBottom="@dimen/navdrawer_edittext_margin_tb"
            android:text="@string/navdrawer_button_login"
            />

    </LinearLayout>
</RelativeLayout>
